# sg-ai-jobs

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml
data/processed/: mom_occupations.json  occupations_enriched.json  prompts.json
data/scored/: scores_run1.json
pipeline/: build.py  enrich.py  ingest.py  models.py  score.py  score_local.py  validate.py
site/: data.json  index.html  llms.txt  methodology.json
tests/: test_enrich.py  test_ingest.py  test_models.py  test_validate.py
